<resources>
    <string name="app_name">Indopedia.Id</string>
    <string name="action_settings"> </string>
    <string name="action_search">Search</string>
    <string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="navigation_view_item_1">Beranda</string>
    <string name="navigation_view_item_2">Akun Saya</string>
    <string name="navigation_view_item_3">Kategori</string>
    <string name="navigasi_kategori_2">Sub Item Navigasi</string>
    <string name="tolong">Bantuan</string>
    <string name="blogs">Blogs</string>
    <string name="navigation_view_item_5">Info Kami</string>
    <string name="join">Kerja Sama</string>
    <string name="cs">Customer Service</string>
    <string name="navigation_view_item_4">Settings</string>
    <string name="user_id">user_id</string>
    <string name="nm_user">Nama User</string>
    <string name="tentang">Tentang Kami</string>
    <string name="beli"><b>Beli Sekarang</b></string>
    <string name="add_chart"><b>Tambah Ke Keranjang</b></string>
    <string name="wish"><b>Whistlist</b></string>
    <string name="checkout">CheckOut</string>
    <string name="konten_dsc">Ini Deskripsi</string>
    <string name="panduan_belanja">Panduan Belanja</string>
    <string name="lacak_pesanan">Panduan Lacak Pesanan</string>
    <string name="pembayaran">Panduan Pembayaran</string>
    <string name="pengiriman">Panduan Pengiriman</string>
    <string name="stok">Stok\nTersedia</string>
    <string name="nm_barang">Tas Ransel AVTECH QARANI -\nKANAKA GEAR</string>
    <string name="total">Total Harga Barang</string>
    <string name="kirim">Pengiriman</string>
    <string name="desc_rat">Rating &#038; Ulasan dari TAS RANSEL AVTECH QARANI - KANAKAGEAR</string>
    <string-array name="urutan">
        <item>Tanggal Dibuat</item>
        <item>Nama Penulis</item>
        <item>Rating Tertinggi</item>
    </string-array>
    <string name="total_bayar">Total Pembayaran</string>
    <string name="btn_bayar">Pembayaran</string>
    <string name="alamat_pengirim"><u>Alamat Pengirim</u></string>
    <string name="jasa_kirim"><u>Jasa Pengiriman</u></string>
    <string name="info_bayar"><u>Informasi Pembayaran</u></string>
    <string name="page_handicraft">Handicraft</string>
    <string name="page_fashion">Fashion</string>
    <string name="page_kesehatan">Helathcare</string>
    <string name="page_makanan">Makanan &#038; Minuman</string>
    <string name="page_pulsa">Pulsa</string>
    <string name="page_data">Paket Data</string>
    <string name="page_pln">Tagihan PLN</string>
    <string name="login">Login</string>
    <string name="regis">Register</string>
    <string-array name="finpay_bi">
        <item>-- Bank --</item>
        <item>BJB SYARIAH</item>
        <item>BPRKS</item>
        <item>BRI</item>
        <item>BRI AGRO</item>
        <item>BRI SYARIAH</item>
        <item>MEGA</item>
        <item>MEGA SYARIAH</item>
        <item>NTB</item>
        <item>NTT</item>
        <item>PANIN SYARIAH</item>
        <item>PAPUA</item>
        <item>PERMATA</item>
        <item>SULSELBAR</item>
        <item>SULUT</item>
        <item>SWADESI</item>
        <item>SYARIAH MANDIRI</item>
        <item>CITIBANK</item>
        <item>POSINDO</item>
        <item>STANDARD CHARTRED BANK</item>
        <item>BTN</item>
        <item>BTPN</item>
        <item>DANAMON</item>
        <item>DIPO</item>
        <item>EKONOMI RAHARJA</item>
        <item>HSBC</item>
        <item>KALSEL</item>
        <item>KALTIM</item>
        <item>MUAMALAT</item>
        <item>JTRUST</item>
        <item>NUSANTARA PARAHYANGAN</item>
        <item>QNB INDONESIA</item>
        <item>BTPN SYARIAH</item>
        <item>MNC BANK</item>
        <item>RABOBANK</item>
        <item>ARTHA GRAHA</item>
        <item>MAYBANK</item>
        <item>BPD ACEH</item>
        <item>BUMI ARTHA</item>
        <item>CIMB NIAGA</item>
        <item>MANDIRI</item>
        <item>MAYAPADA</item>
        <item>MESTIKA</item>
        <item>METRO EXPRESS</item>
        <item>NAGARI</item>
        <item>OCBC NISP</item>
        <item>PANIN</item>
        <item>PRIMAMASTER</item>
        <item>SUMSEL BABEL</item>
        <item>SUMUT</item>
        <item>UOB INDONESIA</item>
        <item>WOORI SAUDARA</item>
        <item>ANTARDAERAH</item>
        <item>ARTOS</item>
        <item>BCA</item>
        <item>BJB</item>
        <item>BNI</item>
        <item>BNI SYARIAH</item>
        <item>BPD BALI</item>
        <item>BUKOPIN</item>
        <item>DIY</item>
        <item>DKI</item>
        <item>GANESHA</item>
        <item>INA PERDANA</item>
        <item>JATENG</item>
        <item>JATIM</item>
        <item>MASPION</item>
        <item>MAYORA</item>
        <item>NOBU OF TOKYO</item>
        <item>SINAR HARAPAN BALI</item>
        <item>VICTORIA YUDHA BAKTI </item>
    </string-array>
    <string-array name="channel_bi">
        <item>-- Channel --</item>
        <item>ATM</item>
        <item>Internet Banking</item>
        <item>Mobile Banking</item>
    </string-array>
    <string-array name="outlet_id">
        <item>-- Outlet --</item>
        <item>Alfamart</item>
        <item>Indomaret</item>
        <item>POS</item>
        <item>Pegadaian</item>
        <item>Delima Point</item>
    </string-array>
    <string-array name="alamat_pedagang">
        <item>Rumah</item>
        <item>Kantor</item>
        <item>papua</item>
        <item>tambah alamat &#8230;</item>
    </string-array>
    <string-array name="sp_provinsi">
        <item>KALIMANTAN BARAT</item>
        <item>KALIMANTAN TIMUR</item>
        <item>KALIMANTAN SELATAN</item>
        <item>KALIMANTAN UTARA</item>
    </string-array>
    <string-array name="sp_kota">
        <item>SEKADAU</item>
        <item>KAPUAS HULU</item>
    </string-array>
    <string-array name="sp_kecamatan">
        <item>BELITANG HULU</item>
        <item>BELITANG HILIR</item>
    </string-array>
    <string-array name="sp_kelurahan">
        <item>SUNGAI ANTU HULU, 79587</item>
        <item>SUNGAI TAPAH, 79587</item>
    </string-array>
    <string name="desc_newsletter">Dengan berlangganan Newsletter kami maka anda akan mendapatkan informasi terbaru perihal promosi dan produk-produk lainya.
        \nSilahkan masukan alamat email dan kategori ketertarikan anda sehingga kami dapat dengan tepat menginformasikan promosi dan produk.
        \n\nUntuk pertanyaan lainnya, jangan ragu untuk memeriksa Pusat Bantuan kami.
    </string>
    <string name="alamat_adm"><b>Admin Indopedia</b>
        \nKalimantan
        \nSungai Antu Hulu, Belitang Hulu
        \nSekadau, Kalimantan Barat
        \08123424234
    </string>
    <string name="desc_about_us">Sebuah market place online yang dimiliki oleh <b>PT. Netwave Multi Media di Jakarta</b>. Situs ini menyediakan sarana jual beli dari konsumen ke konsumen, jangkauan pelayanannya adalah seluruh Indonesia bahkan global, semua bisa membuka market place (toko) di indopedia untuk transaksi satuan maupun partai besar.
        \n\nIndopedia merupakan situs belanja online yang mudah dan aman, mudah dikarenakan menggunakan applikasi teknologi yang user friendly sehingga transaksi online mudah dilakukan dan aman dikarenakan setiap transaksi yang barang yang tidak diterima oleh pembeli akan di jamin dikembalikan uangnya 100%.
        \n\n<b>Visi Indopedia :</b>
        \n\nMenjadi situs online no.1 yang didedikasikan untuk produk - produk Indonesia.
        \n\n<b>Misi Indopedia :</b>
        \n\nMemberdayakan Industri dan produsen dalam negeri Indonesia.
        \nMemberdayan UMKM seluruh Indonesia.
        \n\n<b>Hubungi Kami</b>
        \n\nTelepon :
        \nEmail :
        \nWA :
        \nAlamat :
        \nJam Kerja :
    </string>
</resources>