<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="false"
            android:icon="@drawable/ic_home"
            android:title="@string/navigation_view_item_1" />
        <item
            android:id="@+id/nav_profile"
            android:checked="false"
            android:icon="@drawable/ic_profile"
            android:title="@string/navigation_view_item_2" />
        <item
            android:id="@+id/nav_list"
            android:checked="false"
            android:icon="@drawable/ic_list"
            android:title="@string/navigation_view_item_3" />
        <item
            android:id="@+id/txtLogin"
            android:checked="false"
            android:icon="@drawable/ic_fingerprint"
            android:title="Login"/>

    </group>


    <item
        android:id="@+id/navigasi_kategori_2"
        android:title="@string/navigasi_kategori_2">
        <menu>

            <item
                android:id="@+id/nav_testPage"
                android:checked="false"
                android:title="Test Page" />
            <item
                android:id="@+id/nav_bantuan"
                android:checked="false"

                android:title="@string/tolong" />

            <item
                android:id="@+id/nav_blogs"
                android:checked="false"

                android:title="@string/blogs" />

            <item
                android:id="@+id/nav_about"
                android:checked="false"

                android:title="@string/navigation_view_item_5" />

            <item
                android:id="@+id/nav_join"
                android:checked="false"

                android:title="@string/join" />

            <item
                android:id="@+id/nav_cs"
                android:checked="false"

                android:title="@string/cs" />

            <item
                android:id="@+id/nav_setting"
                android:checked="false"

                android:title="@string/navigation_view_item_4" />

        </menu>
    </item>

</menu>