<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="frontend.netwave.indopediaid.activity.ck_Produk"
    android:background="@drawable/bg_kayu">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- punya gambar -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="100dp"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:padding="1dp"
                    android:src="@drawable/ic_add" />
            </LinearLayout>
            <!-- end punya gambar -->

            <!-- desc chek out -->
            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nm_barang"
                    android:textSize="18sp"
                    android:textColor="@color/teks" />

                <TextView
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KanakaGear"
                    android:textSize="12sp"
                    android:textColor="@color/teks"/>

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/remove_item"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:background="@drawable/bg_coklat"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="-"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/iteam_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:freezesText="true"
                        android:gravity="center"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:minWidth="70dp"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="1"
                        android:textColor="@android:color/background_dark"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/add_item"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:background="@drawable/bg_coklat"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="+"
                        android:textColor="@color/white"
                        android:textSize="30sp"/>
                </LinearLayout>

                <TextView
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp 275.000"
                    android:textSize="15sp"
                    android:textColor="@color/teks"/>

            </LinearLayout>

            <!-- punya gambar -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:paddingTop="22dp"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="1dp"
                    android:src="@drawable/ic_close" />
            </LinearLayout>
            <!-- end punya gambar -->
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bottompanel"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/coba_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <LinearLayout
                android:background="@color/coklat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:layout_margin="@dimen/tulisan"
                    android:textSize="18sp"
                    android:textColor="@color/teks"/>

                <TextView
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp 275.000"
                    android:layout_marginStart="@dimen/tulisan"
                    android:textSize="18sp"
                    android:textColor="@color/teks"/>

                <Button
                    android:id="@+id/btn_beli2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/teks"
                    android:layout_margin="@dimen/tulisan"
                    android:textColor="@android:color/white"
                    android:text="@string/kirim"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>