<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="frontend.netwave.indopediaid.activity.ck_Sum"
    android:background="@drawable/bg_kayu">

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <!-- start isi index kedua -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_item_1"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alamat_pengirim"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/teks"/>

                    <TextView
                        android:layout_marginStart="@dimen/tulisan"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nama : "
                        android:textColor="@color/teks"/>

                    <TextView
                        android:layout_marginStart="@dimen/tulisan"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Alamat : "
                        android:textColor="@color/teks"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_item_2"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jasa_kirim"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/teks"/>

                    <TextView
                        android:layout_marginStart="@dimen/tulisan"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ekspedisi : "
                        android:textColor="@color/teks"/>

                    <TextView
                        android:layout_marginStart="@dimen/tulisan"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Paket : "
                        android:textColor="@color/teks"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_item_3"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_bayar"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/teks"/>

                    <TextView
                        android:layout_marginStart="@dimen/tulisan"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No Invoice :"
                        android:textColor="@color/teks"/>

                    <TextView
                        android:layout_marginStart="@dimen/tulisan"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jumlah : "
                        android:textColor="@color/teks"/>

                    <TextView
                        android:layout_marginStart="@dimen/tulisan"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bayar Melalui : "
                        android:textColor="@color/teks"/>

                    <TextView
                        android:layout_marginStart="@dimen/tulisan"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kode Bayar : "
                        android:textColor="@color/teks"/>

                    <TextView
                        android:layout_marginStart="@dimen/tulisan"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Keterangan : "
                        android:textColor="@color/teks"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bottompanel"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/coba_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <LinearLayout
                android:background="@color/coklat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_beli4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/teks"
                    android:layout_margin="@dimen/tulisan"
                    android:textColor="@android:color/white"
                    android:text="Selesai"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>